# rag_project_2

./: .env  .gitignore  .replit  admin_interface.py  api_backend.py  api_main.py  claude.md  config.py  direct_export.py  export_vector_db.py  hybrid_admin.py  lightweight_api.py  main.py  pdf_rag_gemini.py  pyproject.toml  render.yaml  requirements.txt  storage_manager.py  user_interface.py
storage/: metadata.json
storage/index/: docstore.json  index_store.json
